--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="calculator">
-        <div class="display">TEST</div>
+        <div class="display"></div>
         <div class="buttonsArea">
-            <button>C</button>
+            <button id = "clear">C</button>
             <button>/</button>
-            <button>=</button>
+            <button id = "equals">=</button>
             <button>-</button>
             <button>7</button>
             <button>8</button>
@@ -24,11 +24,12 @@
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>.</button>
+            <button id = "dot">.</button>
             <button>0</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
+            <button>*</button>
         </div>
     </div>
 </body>
